# briehost-api

./: .env.example  .gitignore  ANSIBLE_PROVISIONING_APPROACH.md  PROXMOX_LXC_SETUP.md  README.md  TROUBLESHOOTING.md  ansible.cfg  pyproject.toml
app/: __main__.py  auth.py  config.py  db.py  main.py  proxmox.py  scanner.py  storage.py  worker.py
app/routes/: sites.py
docs/: ara.md
infra/ansible/: README.md
infra/ansible/inventory/: production.ini
infra/ansible/inventory/group_vars/: proxmox.yml
infra/ansible/playbooks/: provision_site.yml
infra/ansible/roles/deploy_site_zip/tasks/: main.yml
infra/ansible/roles/healthcheck/tasks/: main.yml
infra/ansible/roles/proxmox_cleanup/tasks/: main.yml
infra/ansible/roles/proxmox_clone/tasks/: main.yml
infra/ansible/roles/start_container/tasks/: main.yml
infra/templates/: deploy-site.sh
sql/: 003_widen_sites_status.sql  004_sites_ip_vmid.sql
